# Xbotics-One

./: .gitignore  README.md
experiments/: .env.example  .envrc.example  .gitignore  README.md  pyproject.toml
experiments/lerobot/: 0001-groot-remove-dataclass.patch  0002-vla0-smol-policy.patch  fetch_lerobot.sh
experiments/lerobot/rdk/: README.md  fetch_rdk_tools.sh
experiments/lerobot/rdk/act/: README.md  board_act_validate_benchmark_guide.md  bpu_control_robot_dual.py  bpu_control_robot_dual_record.py  bpu_export_config_so101_cuboid_demo.yaml  bpu_export_config_so101_cuboid_s600.yaml  convert-act-to-bpu-walkthrough.md  deploy_guide_so101_act.md  make_pseudo_realtime_video.py  make_separate_videos.py  record-video-walkthrough.md  validate_act_dataset_replay.py
experiments/rl/: README.md
experiments/rl/1_rl_basics/: README.md
experiments/rl/1_rl_basics/1_1_g1_walk_rl/: README.md  env.py  rollout.ipynb  rollout.py  train_v1_reinforce.ipynb  train_v1_reinforce.py  train_v2_a2c.ipynb  train_v2_a2c.py  train_v3_ppo.ipynb  train_v3_ppo.py
experiments/rl/1_rl_basics/1_2_video_to_g1_reference/: README.md  build_motion_npz.py  human_motion_to_g1_reference.py  run_gvhmr_no_render.py  video_to_human_motion.py
experiments/rl/1_rl_basics/1_3_g1_motion_tracking/: README.md  env.py  model.py  motion.py  rollout.ipynb  rollout.py  train_v1_reinforce.ipynb  train_v1_reinforce.py  train_v2_a2c.ipynb  train_v2_a2c.py  train_v3_ppo.ipynb  train_v3_ppo.py
experiments/rl/1_rl_basics/data/g1_reference_motions/: README.md  manifest.md  marshal-arts.npz
experiments/rl/1_rl_basics/result/1_1_g1_walk_rl/: README.md  g1-walk-a2c.json  g1-walk-ppo.json  g1-walk-reinforce.json
experiments/rl/1_rl_basics/result/1_3_g1_motion_tracking/: README.md  marshal-arts-model_10000.json  track-v1-reinforce.json  track-v2-a2c.json  track-v3-ppo-original.json
experiments/rl/2_grpo_posttraining/: README.md
experiments/rl/2_grpo_posttraining/2_1_grpo_vlm_counting/: README.md  train_grpo_qwen2_vl.ipynb  train_grpo_qwen2_vl.py
experiments/rl/2_grpo_posttraining/2_2_grpo_vla0_libero/: README.md  env.py  model.py  rollout.ipynb  rollout.py  train_grpo.ipynb  train_grpo.py
experiments/rl/2_grpo_posttraining/data/clevr_counting/: README.md  eval_superclevr_200.json  sample_prompts.jsonl  train_dataset.json
experiments/rl/2_grpo_posttraining/result/2_1_grpo_vlm_counting/: README.md  base_vs_adapter_summary.json
experiments/rl/2_grpo_posttraining/result/2_1_grpo_vlm_counting/adapter/: README.md  adapter_config.json
experiments/rl/3_hilserl_real/: TODO.md
experiments/vla/: README.md
experiments/vla/1_policy_rollout/: README.md
experiments/vla/1_policy_rollout/1_1_libero_env/: README.md  libero_demo.py
experiments/vla/1_policy_rollout/1_2_pi0_libero_rollout/: pi0_demo.ipynb  pi0_demo.py  pi0_test.ipynb  pi0_test.py
experiments/vla/2_1_pytorch/: 01_mnist_data.ipynb  02_mnist.py  03_mnist_lightning.py  04_wandb.py  pyproject.toml
experiments/vla/2_3_GPT2/: GPT2.ipynb  TransformerAndGPT2.ipynb
experiments/vla/2_data_collection/: README.md  TODO.md
experiments/vla/2_data_collection/2_1_lerobot_setup/: lerobot_v0.5.0_fix.md  pyproject.toml
experiments/vla/2_data_collection/2_2_so101_setup/: README.md
experiments/vla/2_data_collection/2_3_teleop_record/: README.md  rerun-S100-说明.md
experiments/vla/2_data_collection/2_4_lerobot_dataset/: README.md  viz_dataset.sh
experiments/vla/3_1_robotics/: panda_mdh_demo.ipynb  robotics_math_demos_final.ipynb  so101_mdh_demo.ipynb  so101_urdf_to_dh.py
experiments/vla/3_1_robotics/SO101/: so101_new_calib.urdf  so101_new_calib.xml  so101_old_calib.urdf
experiments/vla/3_4_libero/: libero_demo.ipynb  test_libero_demo.py
experiments/vla/3_5_SO101/: bind_camera_s100.sh  bind_uarm_serial_port.sh  bind_uarm_serial_port_s100.sh
experiments/vla/3_imitation_learning/: README.md
experiments/vla/3_imitation_learning/3_1_act/: README.md  infer_act_libero.ipynb  infer_act_libero.py  infer_act_libero_client.ipynb  infer_act_libero_client.py  run_act_cuboid_client.sh  start_act_policy_server.sh  train_act_cuboid.sh  train_act_libero.py  train_act_libero.sh
experiments/vla/4_2_lerobot_dataset/: dataset_demo.ipynb  viz_method2.sh
experiments/vla/4_3_tele_so101/: record.sh  tele.sh
experiments/vla/4_vla_inference/: TODO.md
experiments/vla/5_2_ACT/: infer_act_libero.ipynb  infer_act_libero.py  infer_act_libero_client.ipynb  infer_act_libero_client.py  infer_act_libero_server.ipynb  infer_act_libero_server.py  run_act_cuboid_client.sh  start_act_policy_server.sh  train_act_cuboid.sh  train_act_libero.py  train_act_libero.sh
experiments/vla/5_vla_finetune/: TODO.md
experiments/vla/6_3_pi0/: pi0_demo.py  pi0_test.py
hardware/: README.md
hardware/v1/: bom.md  s100.SLDPRT  s100盖子.SLDPRT
reference/: README.md
