[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "vla_class"
version = "0.0.1"
requires-python = "==3.12.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
# 项目依赖项
dependencies = [
    # pytorch相关依赖项
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torchaudio==2.8.0",
    "lightning",
    "torchmetrics",
    "torchsummary",
    
    "wandb",

    # 其他依赖项
    "numpy",
    "opencv-python",
    "matplotlib",
    "ipython","ipykernel","uv",

    "datasets",
    "tiktoken",
    "tqdm",

    "roboticstoolbox-python",
    "numpy<2",
    "ipympl",

    "SciencePlots",

    # so101_sim 依赖项
    "dm-control>=1.0.31",
    "dm-env>=1.6",
    "immutabledict",
    "mediapy",
    "so101_sim",
]


[tool.uv.sources]
so101_sim = { path = "../3_5_so101_sim/so101_sim", editable = true }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# 将项目标记为非包（non-package）
[tool.uv]
package = false


